# MiniCode

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  tui.py
bench/: .gitignore  sample_20.txt  sample_70.txt  swebench_run.py
bench/runs/local-eval/: claude-code-sonnet-4-6.claude-local.json  gold.local-gold-smoke.json  minicode-20.json
bench/runs/main/: predictions.jsonl  predictions_20.jsonl  status.json  token_report.json
docs/superpowers/plans/: 2026-05-06-swebench-verified-eval.md  2026-05-07-minicode-package-split.md  2026-05-10-minicode-restructure.md
docs/superpowers/specs/: 2026-05-06-swebench-verified-eval-design.md  2026-05-07-minicode-package-split-design.md  2026-05-10-minicode-restructure-design.md
minicode/: cli.py  compression.py  config.py  dispatch.py  loop.py  mcp.py  persisted_output.py  prompts.py  scheduling.py  security.py  skills.py  tasks.py  team.py  todos.py  tools.py  worktree.py
minicode/agent/: compression.py  loop.py
minicode/commands/: __init__.py  batch.py  repl.py
minicode/services/: hooks.py
minicode/tools/: __init__.py  _common.py  bash.py  edit.py  glob.py  grep.py  memory.py  read.py  scheduling.py  subagent.py  tasks.py  team.py  write.py
minicode/ui/: __init__.py  app.py  stream_capture.py
minicode/ui/components/: side_panel.py
minicode/ui/screens/: permission.py
skills/: README.md
skills/code-review/: SKILL.md
skills/debugging/: SKILL.md
skills/test-driven-development/: SKILL.md
skills/writing-plans/: SKILL.md
tests/bench/: test_extract_patch.py  test_prepare_workspace.py
